--- a/bower.json
+++ b/bower.json
@@ -1,13 +1,12 @@
 {
-  "name": "angular-material-icons",
-  "version": "0.7.1",
+  "name": "ny-angular-material-icons",
+  "version": "1.0.0",
   "authors": [
-    "Urmil Parikh <urmil@klarsys.com>"
+    "menya"
   ],
   "description": "AngularJS directive to use Material Design icons with custom fill color and size.",
   "main": [
-      "angular-material-icons.min.js",
-      "angular-material-icons.css"
+      "ny-angular-material-icons.min.js"
   ],
   "keywords": [
     "angular",
@@ -23,15 +22,14 @@
     "custom"
   ],
   "license": "MIT",
-  "homepage": "https://github.com/klarsys/angular-material-icons",
+  "homepage": "https://github.com/mennya/ny-angular-material-icons",
   "dependencies": {
-    "angular": ">1.3.x"
+    "angular": ">=1.5.x",
+    "lodash": "4.15.0"
   },
   "ignore": [
     "**/.*",
     "node_modules",
-    "bower_components",
-    "test",
-    "tests"
+    "bower_components"
   ]
 }
