--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "angular-material-icons",
-  "version": "0.7.1",
-  "author": "Urmil Parikh",
+  "name": "ny-angular-material-icons",
+  "version": "1.0.0",
+  "author": "menya",
   "description": "AngularJS directive to use Material Design icons with custom fill color and size.",
   "main": "index.js",
   "keywords": [
@@ -18,26 +18,29 @@
     "custom"
   ],
   "license": "MIT",
-  "homepage": "https://github.com/klarsys/angular-material-icons",
+  "homepage": "https://github.com/mennya/ny-angular-material-icons",
   "dependencies": {
-    "angular": ">=1.3.0"
+    "angular": ">=1.5.0",
+    "gulp-concat-util": "^0.5.5",
+    "gulp-rename": "^1.2.2",
+    "gulp-typescript": "^2.13.6",
+    "gulp-uglify": "^2.0.0",
+    "typings": "1.3.3"
   },
   "devDependencies": {
-    "gulp": "^3.9.0",
-    "gulp-jshint": "^1.11.2",
-    "gulp-load-plugins": "^1.0.0-rc.1",
-    "gulp-rename": "^1.2.2",
-    "gulp-uglify": "^1.3.0",
-    "jshint-stylish": "^2.0.1"
+    "gulp": "3.9.1",
+    "gulp-load-plugins": "1.2.4",
+    "gulp-uglify": "2.0.0"
   },
   "scripts": {
+    "postinstall": "bower install",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/klarsys/angular-material-icons.git"
+    "url": "https://github.com/mennya/ny-angular-material-icons.git"
   },
   "bugs": {
-    "url": "https://github.com/klarsys/angular-material-icons/issues"
+    "url": "https://github.com/mennya/ny-angular-material-icons/issues"
   }
 }
