--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "ny-angular-material-icons",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "author": "menya",
   "description": "AngularJS directive to use Material Design icons with custom fill color and size.",
-  "main": "index.js",
+  "main": "index",
   "keywords": [
     "angular",
     "material",
@@ -26,6 +26,7 @@
     "gulp-rename": "1.2.2",
     "gulp-typescript": "2.13.6",
     "gulp-uglify": "2.0.0",
+    "gulp-ng-annotate": "2.0.0",
     "typings": "1.3.3"
   },
   "devDependencies": {
